trying to fix contrast error

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -208,6 +208,11 @@ nav {
   box-sizing: border-box;
 }
 
+.upgrade a {
+  color: white;
+  text-decoration: none;
+}
+
 
 
 
